--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,6 @@ runs:
       with:
         serviceAccountJson: ${{ inputs.service-account-json }}
         packageName: ${{ inputs.package-name }}
-        releaseFiles: android/build/outputs/apk/releasesigned-aligned.apk.apk
+        releaseFiles: android/build/outputs/apk/*.apk
         track: ${{ inputs.release-track }}
         status: completed
