find android tools

--- a/action.yml
+++ b/action.yml
@@ -47,6 +47,14 @@ runs:
       shell: bash
       run: ls -la android/build/outputs/apk/release
 
+    - name: Find zipalign 
+      shell: bash
+      run: find . -name "zipalign"
+
+    - name: Find apksigner
+      shell: bash
+      run: find . -name "apksigner"
+
     - name: Align the unsigned APK
       shell: bash
       run: zipalign -v -p 4 android/build/outputs/apk/release/*.apk android/build/outputs/apk/release/unsigned-aligned.apk
