--- a/action.yml
+++ b/action.yml
@@ -39,18 +39,9 @@ runs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
 
-
-    - name: Find zipalign 
-      shell: bash
-      run:  ls -la /usr/local/lib/android/sdk/tools/bin
-
     - name: Find apksigner
       shell: bash
-      run: ls -la /usr/local/lib/android/sdk/build-tools
-
-    - name: Find apksigner
-      shell: bash
-      run: ls -la /usr/local/lib/android/sdk/cmdline-tools
+      run: ls -la /usr/local/lib/android/sdk/cmdline-tools/latest
 
     - name: Build the libGDX application
       shell: bash
@@ -62,11 +53,11 @@ runs:
 
     - name: Align the unsigned APK
       shell: bash
-      run: /usr/local/lib/android/sdk/tools/zipalign -v -p 4 android/build/outputs/apk/release/*.apk android/build/outputs/apk/release/unsigned-aligned.apk
+      run: /usr/local/lib/android/sdk/cmdline-tools/latest/zipalign -v -p 4 android/build/outputs/apk/release/*.apk android/build/outputs/apk/release/unsigned-aligned.apk
 
     - name: Sign APK
       shell: bash
-      run: apksigner sign --ks ${{ inputs.keystore-path }} --out android/build/outputs/apk/release/signed-aligned.apk android/build/outputs/apk/release/unsigned-aligned.apk
+      run: /usr/local/lib/android/sdk/cmdline-tools/latest/apksigner sign --ks ${{ inputs.keystore-path }} --out android/build/outputs/apk/release/signed-aligned.apk android/build/outputs/apk/release/unsigned-aligned.apk
 
     - name: Publish to Play Store
       uses: r0adkll/upload-google-play@v1
