--- a/action.yml
+++ b/action.yml
@@ -7,10 +7,6 @@ branding:
   icon: upload-cloud
 
 inputs:
-  working-directory:
-    description: 'The working directory'
-    required: false
-    default: '.'
   service-account-json:
     description: 'Path to a valid Google service-account.json'
     required: false
@@ -18,16 +14,6 @@ inputs:
   package-name:
     description: 'Android package name'
     required: true
-  keystore-alias:
-    description: 'Alias the keystore'
-    required: true
-  keystore-password:
-    description: 'Password of the keystore'
-    required: true
-  keystore-path:
-    description: 'Path to the keystore'
-    required: false
-    default: 'keystore.keystore'
   release-track:
     description: 'Release track: production, beta, alpha, internalsharing, internal'
     required: false
@@ -45,36 +31,15 @@ runs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v2
 
-    - name: list build-tools
-      shell: bash
-      run: ls -la /usr/local/lib/android/sdk/build-tools/33.0.0
-
-    # - name: Install zipalign, apksigner
-    #   shell: bash
-    #   run: sudo apt install zipalign apksigner
-
     - name: Build the libGDX application
       shell: bash
       run: ./gradlew android:assembleRelease
-
-    - name: list android/build/outputs/apk/release
-      shell: bash
-      run: ls -la android/build/outputs/apk/release
-
-
-    - name: Align the unsigned APK
-      shell: bash
-      run: /usr/local/lib/android/sdk/build-tools/33.0.0/zipalign -v -p 4 android/build/outputs/apk/release/*.apk android/build/outputs/apk/release/unsigned-aligned.apk
-
-    - name: Sign APK
-      shell: bash
-      run: /usr/local/lib/android/sdk/build-tools/33.0.0/apksigner sign --ks ${{ inputs.keystore-path }} --ks-pass ${{ inputs.keystore-password }} --ks-key-alias ${{ inputs.keystore-alias }} --out android/build/outputs/apk/release/signed-aligned.apk android/build/outputs/apk/release/unsigned-aligned.apk
 
     - name: Publish to Play Store
       uses: r0adkll/upload-google-play@v1
       with:
         serviceAccountJson: ${{ inputs.service-account-json }}
         packageName: ${{ inputs.package-name }}
-        releaseFiles: android/build/outputs/apk/signed-aligned.apk
+        releaseFiles: android/build/outputs/apk/release/*.apk
         track: ${{ inputs.release-track }}
         status: completed
