add working-directory parameter

--- a/action.yml
+++ b/action.yml
@@ -18,6 +18,9 @@ inputs:
     description: 'Release track: production, beta, alpha, internalsharing, internal'
     required: false
     default: 'internal'
+  working-directory:
+    required: false 
+    default: .
   
 runs:
   using: "composite"
@@ -33,10 +36,12 @@ runs:
 
     - name: Build the libGDX application
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       run: ./gradlew android:bundleRelease
 
     - name: Publish to Play Store
       uses: r0adkll/upload-google-play@v1
+      working-directory: ${{ inputs.working-directory }}
       with:
         serviceAccountJson: ${{ inputs.service-account-json }}
         packageName: ${{ inputs.package-name }}
