--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
   working-directory:
     required: false 
     default: .
+  changes-not-sent-for-review:
+    description: 'Indicates that the changes in this edit will not be reviewed until they are explicitly sent for review from the Google Play Console. Defaults to false'
+    required: false 
+    default: false
   
 runs:
   using: "composite"
@@ -46,4 +50,5 @@ runs:
         packageName: ${{ inputs.package-name }}
         releaseFiles:  ${{ inputs.working-directory }}/android/build/outputs/bundle/release/*.aab
         track: ${{ inputs.release-track }}
+        changesNotSentForReview: ${{ inputs.changes-not-sent-for-review }}
         status: completed
